namespaces/live.cloud-platform.service.justice.gov.uk/laa-assure-hmrc-data-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-assure-hmrc-data-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "apply-dev"
    cloud-platform.justice.gov.uk/application: "Assure HMRC data"
    cloud-platform.justice.gov.uk/owner: "laa-apply-for-legal-aid: apply-for-civil-legal-aid@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-assure-hmrc-data"
    cloud-platform.justice.gov.uk/team-name: "laa-apply-for-legal-aid"
    cloud-platform.justice.gov.uk/review-after: ""
